2004-06-22  Michael Natterer  <mitch@gimp.org>
	* app/actions/view-actions.c
	* app/actions/view-commands.[ch]: added actions & callbacks to
	configure the canvas padding color.

	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in: added the actions' help IDs and menu entries.

	* app/display/display-enums.h: added /*< skip >*/'ed enum value
	GIMP_CANVAS_PADDING_MODE_RESET.

	* app/display/gimpdisplayshell-appearance.c
	* app/display/gimpdisplayshell-callbacks.[ch]
	* app/display/gimpdisplayshell-handlers.c
	* app/display/gimpdisplayshell.[ch]: removed the canvas padding
	button and its popup menu (fixes bug #142996). Instead, added a
	toggle button which allows to zoom the image when the window is
	resized (as known from sodipodi, except it doesn't work as nice
	yet :-) improvements to the algorithm are welcome).
	Cleaned up the GimpDisplayShell struct a bit and renamed some
	of its members.

	* libgimpwidgets/gimpstock.[ch]
	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-zoom-follow-window-12.png: added new
	icon for the new display toggle button.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13728 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/image-menu.xml.in
+++ b/menus/image-menu.xml.in
@@ -203,6 +203,14 @@
       <menuitem action="view-snap-to-guides" />
       <menuitem action="view-show-grid" />
       <menuitem action="view-snap-to-grid" />
+      <menu action="view-padding-color-menu" name="Padding color">
+        <menuitem action="view-padding-color-theme" />
+        <menuitem action="view-padding-color-light-check" />
+        <menuitem action="view-padding-color-dark-check" />
+        <menuitem action="view-padding-color-custom" />
+        <separator />
+        <menuitem action="view-padding-color-prefs" />
+      </menu>
       <separator />
       <menuitem action="view-show-menubar" />
       <menuitem action="view-show-rulers" />
