Bill Skaggs  <weskaggs@primate.ucdavis.edu>
	* plug-ins/common/dog.c: added Difference of Gaussians edge
	detect plug-in.

	* plug-ins/common/plugin-defs.pl:
	* plug-ins/common/Makefile.am: added dog and regenerated
	Makefile.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13758 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/common/Makefile.am
+++ b/plug-ins/common/Makefile.am
@@ -63,6 +63,7 @@ libexec_PROGRAMS = \
 	dicom \
 	diffraction \
 	displace \
+	dog \
 	edge \
 	emboss \
 	engrave \
@@ -628,6 +629,19 @@ displace_SOURCES = \
 	displace.c
 
 displace_LDADD = \
+	$(libgimpui)							\
+	$(libgimpwidgets)						\
+	$(libgimp)							\
+	$(libgimpcolor)							\
+	$(libgimpbase)							\
+	$(GTK_LIBS)							\
+	$(RT_LIBS)							\
+	$(INTLLIBS)
+
+dog_SOURCES = \
+	dog.c
+
+dog_LDADD = \
 	$(libgimpui)							\
 	$(libgimpwidgets)						\
 	$(libgimp)							\
