2004-07-02  Michael Natterer  <mitch@gimp.org>
	* plug-ins/gimpressionist/Makefile.am
	* plug-ins/gimpressionist/*.[ch]: applied patch from Shlomi Fish
	that massively cleans up gimppressionist (touching all files and
	addding some new ones) and adds a simple PDB interface for
	selecting one of the previously created presets.
	Fixes bugs #145191, #144913 and #144922.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13814 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -28,23 +28,29 @@ libexec_PROGRAMS = gimpressionist
 
 gimpressionist_sources = \
 	brush.c			\
+	color.h			\
 	color.c			\
+	general.h		\
 	general.c		\
 	gimp.c			\
 	gimpressionist.c	\
 	gimpressionist.h	\
+	globals.c		\
 	orientation.c		\
 	orientmap.c		\
 	paper.c			\
+	placement.h		\
 	placement.c		\
 	plasma.c		\
 	ppmtool.c		\
 	ppmtool.h		\
 	presets.c		\
+	preview.h		\
 	preview.c		\
 	repaint.c		\
 	size.c			\
-	sizemap.c
+	sizemap.c		\
+	utils.c
 
 gimpressionist_built_sources = logo-pixbuf.h
 gimpressionist.c: logo-pixbuf.h
