Bill Skaggs <weskaggs@primate.ucdavis.edu>
	* plug-ins/gfig/gfig-dialog.[ch]:
	* plug-ins/gfig/gfig-style.[ch]:
	* plug-ins/gfig/notes.txt:       New files.
	* plug-ins/gfig/*.[ch]:  Complete reworking of the gfig plug-in.
	See 'notes.txt' for a summary of what has changed, and how to use
	it now.  Plenty of bugs have been  introduced, which will take a
	while to straighten out.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13831 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gfig/Makefile.am
+++ b/plug-ins/gfig/Makefile.am
@@ -12,7 +12,7 @@ endif
 
 AM_LDFLAGS = $(mwindows)
 
-SUBDIRS = gfig-examples images
+SUBDIRS = images
 
 libexecdir = $(gimpplugindir)/plug-ins
 
@@ -27,6 +27,8 @@ gfig_SOURCES = \
 	gfig-bezier.h	\
 	gfig-circle.c	\
 	gfig-circle.h	\
+	gfig-dialog.c	\
+	gfig-dialog.h	\
 	gfig-dobject.c	\
 	gfig-dobject.h	\
 	gfig-ellipse.c	\
@@ -45,6 +47,8 @@ gfig_SOURCES = \
 	gfig-star.h	\
 	gfig-stock.c	\
 	gfig-stock.h	\
+	gfig-style.c	\
+	gfig-style.h	\
 	pix-data.h
 
 EXTRA_DIST = README
