2004-07-05  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist: applied patch from Shlomi Fish that
	fixes a number of bugs in the gimpressionst plug-in (bug #145309).

	Also added some const qualifiers, cleaned up includes and removed
	degtorad() and radtodeg() functions that used to duplicate
	functionality from libgimpmath.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13842 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -28,10 +28,11 @@ libexec_PROGRAMS = gimpressionist
 
 gimpressionist_sources = \
 	brush.c			\
-	color.h			\
+	brush.h			\
 	color.c			\
-	general.h		\
+	color.h			\
 	general.c		\
+	general.h		\
 	gimp.c			\
 	gimpressionist.c	\
 	gimpressionist.h	\
@@ -39,8 +40,8 @@ gimpressionist_sources = \
 	orientation.c		\
 	orientmap.c		\
 	paper.c			\
-	placement.h		\
 	placement.c		\
+	placement.h		\
 	plasma.c		\
 	ppmtool.c		\
 	ppmtool.h		\
