--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -2,6 +2,7 @@
 
 libgimpbase = $(top_builddir)/libgimpbase/libgimpbase-$(GIMP_API_VERSION).la
 libgimpcolor = $(top_builddir)/libgimpcolor/libgimpcolor-$(GIMP_API_VERSION).la
+libgimpmodule = $(top_builddir)/libgimpmodule/libgimpmodule-$(GIMP_API_VERSION).la
 libgimpwidgets = $(top_builddir)/libgimpwidgets/libgimpwidgets-$(GIMP_API_VERSION).la
 
 if OS_WIN32
@@ -38,38 +39,42 @@ lib_LTLIBRARIES = \
 	$(controller_linux_input_module)
 
 
+colorsel_libadd = $(libgimpcolor) $(libgimpmodule) $(libgimpwidgets) $(GTK_LIBS)
+cdisplay_libadd = $(libgimpbase) $(libgimpmodule) $(libgimpwidgets) $(GTK_LIBS)
+controller_libadd = $(libgimpmodule) $(libgimpwidgets) $(GTK_LIBS)
+
 libcolorsel_cmyk_la_SOURCES = colorsel_cmyk.c
 libcolorsel_cmyk_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcolorsel_cmyk_la_LIBADD = $(libgimpcolor) $(libgimpwidgets) $(GTK_LIBS)
+libcolorsel_cmyk_la_LIBADD = $(colorsel_libadd)
 
 libcolorsel_triangle_la_SOURCES = colorsel_triangle.c
 libcolorsel_triangle_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcolorsel_triangle_la_LIBADD = $(libgimpcolor) $(libgimpwidgets) $(GTK_LIBS)
+libcolorsel_triangle_la_LIBADD = $(colorsel_libadd)
 
 libcolorsel_water_la_SOURCES = colorsel_water.c
 libcolorsel_water_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcolorsel_water_la_LIBADD = $(libgimpcolor) $(libgimpwidgets) $(GTK_LIBS)
+libcolorsel_water_la_LIBADD = $(colorsel_libadd)
 
 libcdisplay_colorblind_la_SOURCES = cdisplay_colorblind.c
 libcdisplay_colorblind_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcdisplay_colorblind_la_LIBADD = $(libgimpbase) $(libgimpwidgets) $(GTK_LIBS)
+libcdisplay_colorblind_la_LIBADD = $(cdisplay_libadd)
 
 libcdisplay_gamma_la_SOURCES = cdisplay_gamma.c
 libcdisplay_gamma_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcdisplay_gamma_la_LIBADD = $(libgimpbase) $(libgimpwidgets) $(GTK_LIBS)
+libcdisplay_gamma_la_LIBADD = $(cdisplay_libadd)
 
 libcdisplay_highcontrast_la_SOURCES = cdisplay_highcontrast.c
 libcdisplay_highcontrast_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcdisplay_highcontrast_la_LIBADD = $(libgimpbase) $(libgimpwidgets) $(GTK_LIBS)
+libcdisplay_highcontrast_la_LIBADD = $(cdisplay_libadd)
 
 libcdisplay_proof_la_SOURCES = cdisplay_proof.c
 libcdisplay_proof_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcdisplay_proof_la_LIBADD = $(libgimpbase) $(libgimpwidgets) $(GTK_LIBS) $(LCMS_LIBS)
+libcdisplay_proof_la_LIBADD = $(cdisplay_libadd)
 
 libcontroller_linux_input_la_SOURCES = controller_linux_input.c
 libcontroller_linux_input_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcontroller_linux_input_la_LIBADD = $(libgimpwidgets) $(GTK_LIBS)
+libcontroller_linux_input_la_LIBADD = $(controller_libadd)
 
 libcontroller_midi_la_SOURCES = controller_midi.c
 libcontroller_midi_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcontroller_midi_la_LIBADD = $(libgimpwidgets) $(GTK_LIBS)
+libcontroller_midi_la_LIBADD = $(controller_libadd)
