2004-07-05  Michael Natterer  <mitch@gimp.org>
	* app/core/core-types.h: removed enum SizeType.

	* app/text/text-enums.h: added it as enum GimpSizeType and added
	comment that it's for backward compatibility only.

	* tools/pdbgen/Makefile.am
	* tools/pdbgen/pdb/text_tool.pdb: changed accordingly.

	* libgimp/gimpenums.h
	* plug-ins/pygimp/gimpenums.py
	* plug-ins/script-fu/script-fu-constants.c
	* tools/pdbgen/enums.pl: regenerated (pdbgen insisted on
	reordering the enums).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13852 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tools/pdbgen/Makefile.am
+++ b/tools/pdbgen/Makefile.am
@@ -60,7 +60,7 @@ enum_headers = \
 	../../app/paint-funcs/paint-funcs-types.h	\
 	../../app/base/base-enums.h			\
 	../../app/core/core-enums.h			\
-	../../app/core/core-types.h			\
+	../../app/text/text-enums.h			\
 	../../app/paint/paint-enums.h			\
 	../../app/plug-in/plug-in-types.h
 
