2004-07-06  Sven Neumann  <sven@gimp.org>
	* modules/Makefile.am (libcdisplay_proof_la_LIBADD): added back
	$(LCMS_LIBS) that I had accidentally removed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13861 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/modules/Makefile.am
+++ b/modules/Makefile.am
@@ -69,7 +69,7 @@ libcdisplay_highcontrast_la_LIBADD = $(cdisplay_libadd)
 
 libcdisplay_proof_la_SOURCES = cdisplay_proof.c
 libcdisplay_proof_la_LDFLAGS = -avoid-version -module $(no_undefined)
-libcdisplay_proof_la_LIBADD = $(cdisplay_libadd)
+libcdisplay_proof_la_LIBADD = $(cdisplay_libadd) $(LCMS_LIBS)
 
 libcontroller_linux_input_la_SOURCES = controller_linux_input.c
 libcontroller_linux_input_la_LDFLAGS = -avoid-version -module $(no_undefined)
