2004-07-06  Sven Neumann  <sven@gimp.org>
	* plug-ins/gimpressionist: applied patch from Shlomi Fish that
	fixes confusion of filenames and user-visible object names (bug
	#132621). Also removed function remove_trailing_whitespace() that
	used to duplicate functionality from GLib and updated
	preset_create_filename().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13863 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -46,8 +46,9 @@ gimpressionist_sources = \
 	ppmtool.c		\
 	ppmtool.h		\
 	presets.c		\
-	preview.h		\
+	presets.h		\
 	preview.c		\
+	preview.h		\
 	repaint.c		\
 	size.c			\
 	sizemap.c		\
