2004-07-07  Sven Neumann  <sven@gimp.org>
	* app/tools/gimpeditselectiontool.c
	(gimp_edit_selection_tool_key_press): adapt the arrow key velocity
	to the display scale factor. Please test and complain if you
	dislike this behaviour.

	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-color-pick-from-screen-16.png: new
	icon drawn by Jimmac.

	* libgimpwidgets/gimpstock.[ch]: register the new icon.

	* libgimpwidgets/gimppickbutton.c: use it for the screen color
	picker instead of reusing the color picker tool icon.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13868 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/themes/Default/images/Makefile.am
+++ b/themes/Default/images/Makefile.am
@@ -134,6 +134,7 @@ STOCK_BUTTON_IMAGES = \
 	stock-color-picker-black-18.png		\
 	stock-color-picker-gray-18.png		\
 	stock-color-picker-white-18.png		\
+	stock-color-pick-from-screen-16.png	\
 	stock-color-triangle-16.png		\
 	stock-curve-free-16.png			\
 	stock-curve-smooth-16.png		\
