2004-07-07  Michael Natterer  <mitch@gimp.org>
	* app/gui/Makefile.am
	* app/gui/clipboard.[ch]: removed...

	* app/widgets/Makefile.am
	* app/widgets/gimpclipboard.[ch]: ...and added here.

	* app/actions/edit-commands.c
	* app/gui/gui.c: changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13876 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/widgets/Makefile.am
+++ b/app/widgets/Makefile.am
@@ -37,6 +37,8 @@ libappwidgets_a_sources = \
 	gimpcellrendererviewable.h	\
 	gimpchanneltreeview.c		\
 	gimpchanneltreeview.h		\
+	gimpclipboard.c			\
+	gimpclipboard.h			\
 	gimpcolorbar.c			\
 	gimpcolorbar.h			\
 	gimpcolordisplayeditor.c	\
