Various Gimpressionist Cleanups. Made most remaining non-static global variables static, and created functions that manipulate them. Created new headers. Renamed some variables and functions to make their names more menanigful.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13893 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/plug-ins/gimpressionist/Makefile.am
+++ b/plug-ins/gimpressionist/Makefile.am
@@ -37,6 +37,7 @@ gimpressionist_sources = \
 	gimpressionist.c	\
 	gimpressionist.h	\
 	globals.c		\
+	infile.h        \
 	orientation.c		\
 	orientmap.c		\
 	paper.c			\
@@ -49,7 +50,9 @@ gimpressionist_sources = \
 	presets.h		\
 	preview.c		\
 	preview.h		\
+	random.h        \
 	repaint.c		\
+	size.h          \
 	size.c			\
 	sizemap.c		\
 	utils.c
