2004-07-09  Sven Neumann  <sven@gimp.org>
	* app/gui/gui.c: removed the quit dialog code here.

	* app/gui/Makefile.am
	* app/gui/quit-dialog.[ch]: added new files that hold the old code
	for now.

2004-07-09  Sven Neumann  <sven@gimp.org>

	* POTFILES.in: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13909 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/gui/Makefile.am
+++ b/app/gui/Makefile.am
@@ -37,6 +37,8 @@ dialogs_sources = \
 	palette-import-dialog.h		\
 	preferences-dialog.c		\
 	preferences-dialog.h		\
+	quit-dialog.c			\
+	quit-dialog.h			\
 	resize-dialog.c			\
 	resize-dialog.h			\
 	resolution-calibrate-dialog.c	\
